# qdrant-ada

./: Makefile  docker-compose.yml  pyproject.toml  qdrant.ipynb  retrieval.ipynb
