[tool.poetry]
name = "qdrant-ada"
version = "0.1.0"
description = ""
authors = ["Hiromu Nakamura <hiromu-nakamura@m3.com>"]
readme = "README.md"
packages = [{include = "qdrant_ada"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
openai = "^0.27.2"
langchain = "^0.0.123"
llama-index = "^0.4.39"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
ipykernel = "^6.22.0"
notebook = "^6.5.3"
jupyter = "^1.0.0"
setuptools = "^67.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
